--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
 spring.jpa.open-in-view=true
 
+#spring.profiles.active=dev
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.username=sa
 #spring.datasource.password=
